# NiteFury-and-LiteFury

./: .gitignore  README.md  vivado.jou
Hardware/: uEVB-BOM-Z3.xlsx
Sample-Projects/: .gitignore
Sample-Projects/DDR-test/: uEVB-TnD.xpr  uEVB.xdc  vivado.jou  vivado_10052.backup.jou  vivado_3916.backup.jou
Sample-Projects/Project-0-x1/FPGA/mcs/: R1.prm  out.prm
Sample-Projects/Project-0-x1/FPGA/source/: cmds.txt  hs_err_pid5256.dmp  mig7.ucf  uEVB.xpr  vivado.jou  vivado_3544.backup.jou  vivado_5256.backup.jou  vivado_5812.backup.jou  vivado_pid8620.str
Sample-Projects/Project-0/FPGA/: readme.md
Sample-Projects/Project-0/FPGA-A100/mcs/: P0-A100T-2L.prm
Sample-Projects/Project-0/FPGA-A100/source/: cmds.txt  uEVB.xdc  uEVB.xpr
Sample-Projects/Project-0/FPGA-A100T-2/project/: project.xpr
Sample-Projects/Project-0/FPGA-A100T-2/scripts/: add-flash.tcl  build.tcl
Sample-Projects/Project-0/FPGA-A100T-2/src/constraints/: normal.xdc
Sample-Projects/Project-0/FPGA-A100T-2/src/hdl/: led_blinker_id.v
Sample-Projects/Project-0/FPGA-A200T-3/: .gitignore  create-project.bat  create-project.tcl  readme.md
Sample-Projects/Project-0/FPGA-A200T-3/mcs/: out.prm
Sample-Projects/Project-0/FPGA-A200T-3/project/: project.xpr
Sample-Projects/Project-0/FPGA-A200T-3/scripts/: build.tcl  make-mcs.tcl
Sample-Projects/Project-0/FPGA-A200T-3/src/bd/: project_bd.tcl
Sample-Projects/Project-0/FPGA-A200T-3/src/constraints/: normal.xdc  uEVB-early.xdc  uEVB.xdc
Sample-Projects/Project-0/FPGA/LiteFury/: readme.md
Sample-Projects/Project-0/FPGA/LiteFury/mcs/: out.prm
Sample-Projects/Project-0/FPGA/LiteFury/project/: project.xpr
Sample-Projects/Project-0/FPGA/LiteFury/scripts/: add-flash.tcl  build.tcl  make-mcs.tcl  program-flash.tcl  rebuild.tcl
Sample-Projects/Project-0/FPGA/Nitefury-II/mcs/: out.prm
Sample-Projects/Project-0/FPGA/mcs/: R2.prm  out.prm
Sample-Projects/Project-0/FPGA/source/: .gitignore  cmds.txt  design_1.tcl  uEVB.tcl  uEVB.xdc  uEVB.xpr  vivado.jou  vivado_2988.backup.jou  vivado_4380.backup.jou  vivado_6780.backup.jou  vivado_pid5256.str  vivado_pid6780.str
Sample-Projects/Project-0/Host/: fury-test.sh  readme.md  test-ddr.py  test-general.py
Sample-Projects/Project-0/Host/Host/: dma-test-2.py
Sample-Projects/TnD/: cmds.txt  uEVB-TnD.xpr  uEVB.xdc  vivado.jou  vivado_1220.backup.jou  vivado_2916.backup.jou  vivado_7868.backup.jou  vivado_pid7032.str
Sample-Projects/TnD/mcs/: A100.mcs  A100.prm  out.mcs  out.prm
spi-loader/: README.md
spi-loader/linux/: .gitignore
spi-loader/linux/sw/: CMakeLists.txt  LICENSE
spi-loader/linux/sw/app-linux/: Main.cpp  spi-s25fl.hpp
spi-loader/linux/sw/lib/: readme.txt
spi-loader/linux/sw/lib/common/: xil_io.c  xil_io.h  xil_printf.h
spi-loader/linux/sw/lib/src/: xspi.c  xspi.h
spi-loader/linux/sw/slickedit/: all-2.vpj  spi-loader.vpw  spi-loader.vpwhist
spi-loader/linux/sw/test/: test1.sh
(+1292 files in other folders)
